--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,2 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
 @tailwind base;
 @tailwind utilities;
+
+* {
+    font-family: 'Raleway', sans-serif;
+}
